--- a/smartphones/seccion3/seccion3.css
+++ b/smartphones/seccion3/seccion3.css
@@ -22,6 +22,7 @@
 }
 .f{
     font-family: Arial, Helvetica, sans-serif;
+    color: #666666;
 }
 .g{
     color: #008ECC;
@@ -43,4 +44,8 @@ width: 270px;
     gap: 80px;
     justify-content: center;
     margin-top: 50px;
+}
+.x{
+    position: absolute;
+    top: 1840px;
 }
